chore: Remove sensitive data before public release
- Replace hardcoded passwords with environment variable references
- Replace API keys with placeholders in env.example
- Add .sensors to .gitignore
- Clean credentials from documentation and scripts

--- a/env.example
+++ b/env.example
@@ -1,18 +1,18 @@
 # EC2 Sensor Configuration
 # Copy this file to .env and update with your values
 
-# API Configuration
-EC2_SENSOR_API_KEY=5Y0NO7KW2P25ttWRQ8mXj8vtMSKFrLsN9Dh3woPL
-EC2_SENSOR_BASE_URL=https://w5f1gqx5g0.execute-api.us-east-1.amazonaws.com/prod/ec2_sensor
+# API Configuration (get from your team)
+EC2_SENSOR_API_KEY=your_api_key_here
+EC2_SENSOR_BASE_URL=https://your-api-endpoint.execute-api.us-east-1.amazonaws.com/prod/ec2_sensor
 
-# Current Sensor
-SENSOR_NAME=ec2-sensor-testing-cicd-russsmith-560416058521224935
+# Current Sensor (optional - will be set automatically)
+SENSOR_NAME=
 
 # Default Configuration
 DEFAULT_BRANCH=testing
-DEFAULT_TEAM=cicd
-DEFAULT_USERNAME=russsmith
+DEFAULT_TEAM=your_team
+DEFAULT_USERNAME=your_username
 
-# SSH Configuration (Standard for all sensors)
+# SSH Configuration (get from your team)
 SSH_USERNAME=broala
-SSH_PASSWORD=This#ahNg9Pi
+SSH_PASSWORD=your_ssh_password_here
