chore: Remove unrelated files from repository
Keep only core sensor.sh files:
- sensor.sh (main script)
- ec2sensor_ui.sh, ec2sensor_state.sh, ec2sensor_logging.sh
- sensor_lifecycle.sh
- README.md, .gitignore, .env.template, env.example

Removed: docs/, scripts/, testing/, workflows/, mcp_integration/,
sensor_prep/, pcaps/, .agents/, .codebuff/, and misc files

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,23 @@ testing/test_data/*
 # Temporary files
 *.tmp
 temp/
+
+# Removed from repo (kept locally)
+.agents/
+.codebuff/
+docs/
+mcp_integration/
+pcaps/
+scripts/
+sensor_prep/
+testing/
+workflows/
+CLAUDE.md
+TUI_ENHANCEMENT_PLAN.md
+UI_IMPROVEMENTS_SUMMARY.md
+knowledge.md
+compare_sensors.sh
+delete_sensor.py
+force_delete_sensor.py
+humio_query_v28.2.6.txt
+traffic_generator_*.txt
