docs: Add ADMIN_PASSWORD to env.example template

--- a/env.example
+++ b/env.example
@@ -16,3 +16,6 @@ DEFAULT_USERNAME=your_username
 # SSH Configuration (get from your team)
 SSH_USERNAME=broala
 SSH_PASSWORD=your_ssh_password_here
+
+# Admin Password (for P1 automation preparation)
+ADMIN_PASSWORD=your_admin_password_here
