Add Go + Bubble Tea TUI rewrite (ec2sensor-go) with timeout-free upgrade monitoring

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@
 .env
 .env.*
 !.env.template
+.mcp.json
 
 # Sensor tracking (contains instance-specific data)
 .sensors
+
+# SDET working directory (not tracked)
+sdet/
 
 # Log files
 logs/
